# oxc-jsx-dom-expressions

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: CI.yml
crates/core/: Cargo.toml  copy-fixtures.nu
crates/core/src/: config.rs  jsx_transform.rs  lib.rs  this_to_self.rs
crates/core/src/dom/: element.rs  template.rs
crates/core/src/shared/: mod.rs  transform.rs  utils.rs
crates/core/tests/transform/: dom.rs  mod.rs
crates/napi/: .npmignore  Cargo.toml  index.d.ts  index.js  package.json
crates/napi/npm/darwin-arm64/: README.md
crates/napi/npm/darwin-x64/: package.json
crates/napi/npm/linux-arm64-musl/: README.md
crates/napi/npm/linux-x64-gnu/: package.json
crates/napi/npm/linux-x64-musl/: README.md
crates/napi/src/: config.rs  lib.rs
crates/napi/tests/: index.mjs
npm/darwin-arm64/: package.json
npm/darwin-x64/: README.md
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: README.md
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
test/: index.mjs
